force-app/main/default/objects/ssot__EngagementAnalysisText__dlm/fields/ssot__EngagementAnalysisPayloadText__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementAnalysisPayloadText__c</fullName>
    <label>Engagement Analysis Payload</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementAnalysisPayloadText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>