force-app/main/default/objects/ssot__EngagementAnalysisText__dlm/fields/ssot__EngagementAnalysisTextEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementAnalysisTextEndDateTime__c</fullName>
    <label>Engagement Analysis Text End Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementAnalysisTextEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>