force-app/main/default/objects/ssot__EngagementAnalysisText__dlm/fields/ssot__InsightsExtractionStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__InsightsExtractionStatus__c</fullName>
    <label>Insights Extraction Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InsightsExtractionStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>