force-app/main/default/objects/ssot__EngagementAnalysisText__dlm/fields/ssot__rel_1718546697811_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718546697811_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EngagementAnalysisText_EngagementAna_rel</label>
    <referenceTo>ssot__EngagementAnalysisTextSession__dlm</referenceTo>
    <relationshipLabel>EngagementAnalysisText_EngagementAna_rel</relationshipLabel>
    <relationshipName>rel_1718546697811_end</relationshipName>
    <type>Lookup</type>
</CustomField>